# gmail_management

./: .gitignore  list_unreads.py  pyproject.toml  reproduce_issue.py
notebooks/: list_unread_gmail.ipynb  send_gmail.ipynb  show_labels.ipynb
src/gmail/: gmail_manager.py  gmail_tools.py
src/gmail_assistant/tools/gmail/: __init__.py  gmail_manager.py  gmail_tools.py
