[project]
name = "gmail-management"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-api-python-client>=2.193.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-ollama>=1.1.0",
]
